--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "antd": "^5.11.1",
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
-    "framer-motion": "^10.16.4",
     "jotai": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
