--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "antd": "^5.11.1",
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
+    "dayjs": "^1.11.10",
     "jotai": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "recharts": "^2.9.3",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/recharts": "^1.8.27",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
